

[metadata]
name = BYOD
version = 0.1.0
author = Neel Jain, Khalid Saifullah, Jonas Geiping
author_email = njain17@umd.edu
url = https://github.com/neelsjain/BYOD
description = Bring Your Own Data! A Framework for Self-Supervised Evaluation of Large Language Models
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = todo
classifiers =
    Topic :: NLP
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
homepage = "arxiv link to be added later"
repository = "https://github.com/neelsjain/BYOD"
documentation = "arxiv link to be added later"

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.9
packages = find:

setup_requires =
    setuptools

install_requires =
    torch >= 2.0.0
    transformers >=4.28.1
    scipy >=1.10.1
    datasets >= 2.11.0
    nltk >= 3.8.1
    apache_beam >= 2.48.0

scripts =
  run_lrs.py
  run_negations.py
  run_tokenization_split.py
  run_toxicity.py
  run_word_order.py

[options.package_data]
* =  "*.yaml", "*.txt"


[check-manifest]
ignore =
    .ipynb
    .sh


#basically the pytorch flake8 setting from https://github.com/pytorch/pytorch/blob/master/.flake8
[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 140
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203,E305,E402,E501,E721,E741,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303,
per-file-ignores = __init__.py: F401 torch/utils/cpp_extension.py: B950
optional-ascii-coding = True
exclude =
    .git,
    __pycache__,
    scripts,
    tables,
    outputs,
    *.pyi



# How to upload to pypi for dummies (me,jonas)
#
# check-manifest -u -v
# python -m build
# twine upload --repository testpypi dist/*
# increment the version number every time you mess up
#
#
### test:
#
# pip install -i https://test.pypi.org/simple/ reponame==0.1.0 # does not install dependencies
# pip install dist/reponame-0.1.0.tar.gz # install distribution directly
